REST API: add GET /v1/files/{file}/trades
